canary/products/products-umbrella-online-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: shop
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: products-umbrella
    app.kubernetes.io/version: 1.0.0
    helm.sh/chart: productsNetworkingOnline-0.1.0
  name: products-umbrella-online
  namespace: gitops
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: shop
    app.kubernetes.io/name: products-umbrella
  type: ClusterIP
