canary/products/products-umbrella-online-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/instance: shop
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: products-umbrella
    app.kubernetes.io/version: 1.0.0
    helm.sh/chart: productsNetworkingOnline-0.1.0
  name: products-umbrella-online
  namespace: gitops
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: products-umbrella-online
